fixed font-families and data-aos=true and line spacing

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -39,12 +39,13 @@
 .description__wrapper-1 > p {
   font-size: 40px;
   width: 55%;
-  line-height: 55px;
+  line-height: 60px;
   text-shadow: 1px 1px 6px rgb(163, 163, 163);
   font-family: "Architects Daughter", cursive;
 }
 .description__wrapper-2 > p {
   font-size: 18px;
+  line-height: 40px;
   width: 55%;
   text-shadow: 1px 1px 6px rgb(163, 163, 163);
   font-family: "Libre Franklin", sans-serif;
@@ -146,6 +147,7 @@
   }
   .description__wrapper-1 > p {
     font-size: 30px;
+    line-height: 55px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -153,6 +155,7 @@
   }
   .description__wrapper-2 > p {
     font-size: 18px;
+    line-height: 35px;
     width: 90%;
     display: flex;
     justify-content: center;
